components/kube-ops-view/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops-view
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
