components/kube-ops-view/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kube-ops-view
spec:
  host: kov.apps.${CLUSTER_BASE_DOMAIN}
  to:
    kind: Service
    name: kube-ops-view
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
